python-app-project/uat/6_my-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-flask-app-dep-2
  labels:
    workspace: scalian_training-practica
spec:
  selector:
    matchLabels:
      app: my-flask-app
      workspace: scalian_training-practica
  strategy:
    type: Recreate
  replicas: 3
  template:
    metadata:
      labels:
        app: my-flask-app
        workspace: scalian_training-practica
    spec:
      containers:
      - image: adrianscalian/scalian_training_flask-app:0.0.2-slim
        name: flask-app-2
        ports:
        - containerPort: 5000
          name: flask-app-port
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
