python-app-project/uat/5_database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-svc
spec:
  ports:
  - port: 3306
  selector:
    app: database
    workspace: scalian_training-practica
  #clusterIP: None
