python-app-project/uat/7_my-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-flask-app-svc
spec:
  ports:
  - port: 5000
  selector:
    app: my-flask-app
    workspace: scalian_training-practica
  clusterIP: None
